Mobile spacing and img fixed

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ button:hover {
     padding-bottom: 0.5px
 }
 .col-0-gutter img {
-    min-height: 400px !important;    
+    min-height: 400px ;    
     object-fit: contain
 }
 
@@ -391,7 +391,7 @@ figure.effect-bubba figcaption::after {
 	content: '';
 	opacity: 0;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
+	transition: opacity 0.35s, transform .95s;
 }
 
 figure.effect-bubba figcaption::before {
@@ -411,20 +411,20 @@ figure.effect-bubba figcaption::after {
 figure.effect-bubba h2 {
     color: #fff;
     font-size: 15px;
-    font-weight: 700;
-    text-transform: uppercase;
+    font-weight: 300;
 	padding-top: 30%;
 	-webkit-transition: -webkit-transform 0.35s;
 	transition: transform 0.35s;
 	-webkit-transform: translate3d(0,-20px,0);
-	transform: translate3d(0,-20px,0);
+    transform: translate3d(0,-20px,0);
+    opacity: 0;
 }
 
 figure.effect-bubba p {
     color: #fff;
     font-size: 13px;
     font-weight: 500;
-	padding: 20px 2.5em;
+	margin: 40px 0 40px 0;
 	opacity: 0;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
@@ -683,4 +683,19 @@ and (max-width : 480px) {
     margin: 0px;
     text-align: justify
 }
+.col-0-gutter img {
+    min-height: 200px !important
+}
+.navbar {
+    margin-bottom: 0px;
+}
+.navbar-brand {
+    width: 80%
+}
+.navbar-brand img {
+    width: 100%
+}
+section {
+    padding-top: 0px 
+ }
 }
